Fully working and ugly search
Update inferno to v5 fixed component import error, Remove strict null check fix this.stat                 ✓  9366  17:44:25e preventing build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
 		],
 		"jsx": "preserve",
 		"noUnusedLocals": true,
-		"strictNullChecks": true,
+		"strictNullChecks": false,
 		"removeComments": false
 	},
 	"include": [
