--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A nice looking, relevant & fast instant-search application searching in the underlying apps.",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.conf.js --host 0.0.0.0",
+    "start": "webpack-dev-server --mode development --config webpack.conf.js --host 0.0.0.0",
     "build": "webpack -p --config webpack.conf.js",
     "lint": "eslint src"
   },
@@ -28,7 +28,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
-    "babel-plugin-inferno": "^3.3.0",
+    "babel-plugin-inferno": "^5.0.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -54,9 +54,8 @@
     "algoliasearch": "^3.27.1",
     "algoliasearch-helper": "^2.26.0",
     "history": "^4.7.2",
-    "inferno": "^3",
-    "inferno-component": "^3",
-    "inferno-create-element": "^3",
-    "inferno-router": "^3"
+    "inferno": "^5.0.6",
+    "inferno-create-element": "^5.0.6",
+    "inferno-router": "^5.0.6"
   }
 }
