--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/trueadm/inferno-boilerplate.git"
+    "url": "git+https://github.com/Enterthusiast/algolia-inferno-front.git"
   },
   "keywords": [
     "inferno",
@@ -18,12 +18,8 @@
     "cerebral",
     "jsx"
   ],
-  "author": "Dominic Gannaway",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/trueadm/inferno-boilerplate/issues"
-  },
-  "homepage": "https://github.com/trueadm/inferno-boilerplate#readme",
+  "author": "",
+  "homepage": "https://github.com/Enterthusiast/algolia-inferno-front#readme",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
@@ -47,10 +43,10 @@
     "url": "^0.11.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "@types/algoliasearch": "^3.27.3"
   },
   "dependencies": {
-    "@types/algoliasearch": "^3.27.3",
     "algoliasearch": "^3.27.1",
     "algoliasearch-helper": "^2.26.0",
     "history": "^4.7.2",
